stability fixes
- hide copy / select all on mobile, does not work most of the time
- small build fixes
- remove permalink, really too big

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -77,7 +77,7 @@ html {
   margin-top: 1em;
 }
 
-.container .copy-failed {
+#send-failed {
   font-size: 0.9em;
 }
 
@@ -108,7 +108,7 @@ textarea#out {
 
 .results {
   padding-top: .5em;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 }
 
 .results h2, .results p {
@@ -131,7 +131,7 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 .footer {
   position: absolute;
@@ -142,7 +142,7 @@ body {
 }
 
 .footer p {
-  width: 10%;
+  width: 20%;
   border-top: 2px solid #4CAFD8;
   margin: 0 auto;
   line-height: 40px;
